# Athena

./: README.md  index.html  setup_llama.sh  uno.config.js  vite.config.js
src/: App.jsx  Architecture.md  hook.js  main.jsx  translation.js
src-tauri/: Architecture.drawio  Cargo.toml  build.rs  tauri.conf.json
src-tauri/cmake/: quantizerConfig.cmake.in
src-tauri/src/: Architecture.md  commands.rs  lib.rs  main.rs  test.txt  test2.txt
src-tauri/src/Engine/: Architecture.md
src-tauri/src/cache/: Architecture.md  embedder.rs  flusher.rs  manager.rs  message.rs  mod.rs  score.rs  tests.rs
src-tauri/src/disk/: Architecture.md  types.rs
src-tauri/src/embedding/: ffi.rs  mod.rs
src-tauri/src/engine/: Architecture.md  core.rs  mod.rs  orchestrator.rs  tests.rs  traits.rs  types.rs
src-tauri/src/engine/output/: Architecture.md  builder.rs  formatter.rs  injector.rs  mod.rs  schema.rs  templates.rs  tests.rs  traits.rs
src-tauri/src/engine/retrieval/: Architecture.md  db.rs  merger.rs  mod.rs  query.rs  result.rs  router.rs  scorer.rs  tests.rs  ws.rs
src-tauri/src/engine/retrieval/sources/: cache.rs  memory.rs  mod.rs  tests.rs  web.rs
src-tauri/src/llama/: engine.cpp  engine.hpp  ffi.rs  mod.rs
src-tauri/src/llm/: Aurora.toml  Ekaterina.toml  Erika.toml  mod.rs  personality.toml  receive.rs  send.rs
src-tauri/src/memory/: Architecture.md  index.rs  io.rs  layout.rs  mod.rs  record.rs  search.rs  store.rs  tests.rs
src-tauri/src/personalities/: Aurora.toml  Ekaterina.toml  Erika.toml  Viktor.toml  mod.rs
src-tauri/src/postprocessing/: Architecture.md  context.rs  formatter.rs  interpreter.rs  mod.rs  persona.rs  templates.rs  tests.rs  traits.rs  validator.rs
src-tauri/src/preprocessing/: Architecture.md  cleaner.rs  context.rs  formatter.rs  mod.rs  router.rs  tokenizer.rs
src-tauri/src/quantization/: bridge.rs  config.rs  mod.rs
src-tauri/src/quantization/cpp/: CMakeList.txt  kernels.cpp  kernels.hpp  quantizer.cpp  quantizer.hpp
src-tauri/src/security/: Architecture.md  compression.rs  encryption.rs  mod.rs
src-tauri/src/security/compression/: Architecture.md  codec.rs  config.rs  errors.rs  mod.rs  types.rs  utils.rs
src-tauri/src/security/compression/bitpacking/: decoder.rs  encoder.rs  mod.rs  utils.rs
src-tauri/src/security/compression/entropy/: ans.rs  huffman.rs  mod.rs  rle.rs  zstd.rs
src-tauri/src/security/encryption/: Architecture.md  errors.rs  key.rs  mod.rs  nonce.rs  types.rs  utils.rs
src-tauri/src/security/encryption/aead/: aes_gcm.rs  chacha20poly1305.rs  mod.rs
src-tauri/src/security/encryption/kdf/: argon2.rs  hkdf.rs  mod.rs
src-tauri/src/security/encryption/tests/: test_kdf.rs
src-tauri/src/security/quantization/: Architecture.md  bridge.rs  config.rs  decoder.rs  encoder.rs  ffi.rs  mod.rs  preprocessor.rs  trainer.rs  types.rs  wrapper.rs
src-tauri/src/security/quantization/cpp/: CMakeLists.txt  README.md  faiss_wrapper.cpp  faiss_wrapper.hpp  quantizer.cpp  quantizer.hpp
src-tauri/src/security/quantization/cpp/include/: faiss_wrapper.h
src-tauri/src/security/quantization/cpp/src/: platform.cpp  wrapper.cpp  wrapper.h
src-tauri/src/security/quantization/cpp/tests/: CMakeLists.txt  smoke.cpp
src-tauri/src/security/quantization/tests/: mod.rs  test_decoder.rs  test_encoder.rs  test_integration.rs  test_preprocessor.rs  test_trainer.rs  test_types.rs
src-tauri/src/sgbd/: Architecture.md  btree.rs  engine.rs  mod.rs  plan.md  storage.rs  tx.rs  types.rs  wal.rs
src-tauri/src/vector/: Architecture.md  client.rs  insert.rs  mod.rs  query.rs  schema.rs  security.rs  transformation.rs
src-tauri/src/vector/embedding/: engine.cpp  engine.hpp
src/chat/: AISelector.jsx  Architecture.md  ChatContainer.jsx  MessageBubble.jsx  MessageInput.jsx  MessageList.jsx  TypingIndicator.jsx
src/chat/support/: ChatHeader.jsx  MessageActions.jsx
src/components/: ActivityTimeline.jsx  ChatMessagesView.jsx  InputForm.jsx  Viewport-height-fix.js  WelcomeScreen.jsx
src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Input.jsx  ScrollArea.jsx  Select.jsx  Tabs.jsx  TextArea.jsx
src/pages/: Chat.jsx  SplashScreen.jsx  WelcomeContainer.jsx
src/personality/: PersonalityAvatar.jsx  avatars.js
src/styles/: Architecture.md  components.css  globals.css  index.css  ui.css
src/styles/components/welcome/: Selector.css
src/translation/: LanguageDropdown.jsx  de.js  en.js  es.js  fr.js  it.js  main.jsx  pt.js
src/welcome/: Architecture.md  ModeSelector.jsx  ProficiencySelector.jsx  TopicSelector.jsx  WelcomeHeader.jsx
src/welcome/support/: OnboardingCards.jsx  PreferencesPanel.jsx  StartChatButton.jsx  WelcomeCard.jsx
