[package]
name = "athena"
version = "0.1.0"
description = "A tutor/assistant for natural and programming languages."
authors = ["Guilherme F. G. Santos"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "athena_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "^1.0"

[dependencies]
tauri = { version = "^2.5.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full", "rt", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
url = "2.4"
regex = "1.9"
async-trait = "0.1"
dotenv = "0.15"
thiserror = "^1.0"
bytes = "1.6"
lz4 = "1.24"
bincode = "1.3.3"
crc32fast = "1.4"
zstd = "0.13.3"
flate2 = "1.0"
rand_core = "0.6"
toml = "0.5.4"
lru = "0.10"
memmap2 = "0.9"
tempfile = "3.8"
futures = "0.3"
chacha20poly1305 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
rayon = "1.8"
argon2 = "0.5"
blake3 = "1.5"
base64 = "0.22"
aes-gcm = "0.10"
hkdf = "0.12"

[features]
default = ["custom-protocol", "parallel", "mobile-optimized"]
parallel = []
custom-protocol = ["tauri/custom-protocol"]
cuda = ["cc/parallel"]
metal = []
static = []
mobile-optimized = []
low-power = []
ios = []
android = []
ffi = []
serde = []

[dev-dependencies]
tempfile = "^3.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = "0.8"
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"
